# mpwst-scrapy-selenium

./: LICENCE  README.md  setup.cfg  setup.py
docker/: Dockerfile  TestSpider.py  build.bat  build.sh  makecontainer.bat  makecontainer.sh  refresh.bat  refresh.sh  settings.py  shell.bat  shell.sh
requirements/: requirements.txt
scrapy_selenium/: http.py  middlewares.py
tests/: test_cases.py  test_middlewares.py
