[metadata]
name = scrapy-selenium
version = 0.0.9
url = https://github.com/dylanwalker/better-scrapy-selenium
licence = MIT
description = Selenium Middleware for Scrapy that allow for multiple concurrent headless browsers.
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
